# solar-sail

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_compile.sh  vides.html
src/: ConfigMarineVessel.h  ConfigSolarsail.h  Graph.cpp  Graph.h  Keepout.h  MDP.cpp  MDP.h  MyODE.cpp  MyODE.h  MyResult.h  MySetRRT.cpp  MySetRRT.h  OdeInvertPendulum.cpp  OdeInvertPendulum.h  OdeInvertPendulumSimple.cpp  OdeInvertPendulumSimple.h  OdeMarineVessel.cpp  OdeMarineVessel.h  OdeSimpleExample.cpp  OdeSimpleExample.h  OdeSolarsail.cpp  OdeSolarsail.h  OdeSolver.cpp  OdeSolver.h  OdeVirtual.cpp  OdeVirtual.h  PlannerVirtual.cpp  PlannerVirtual.h  SetRRT.cpp  SetRRT.h  SparseMatrix.h  UnsafeCircle.h  helperfunctions.h  myownlibrary.cpp  myownlibrary.h  test_invertpendulum.cpp  test_invertpendulumsimple.cpp  test_main.cpp  test_marinevessel.cpp  test_setrrt.cpp  (+2 more)
